force-app/main/default/objects/LLC_BI__Risk_Grade_Criteria__c/LLC_BI__Risk_Grade_Criteria__c.object-meta.xml
<CustomObject>
    <description>Used in conjunction with the annual review</description>
    <label>Risk Grading Criteria</label>
    <nameField>
        <displayFormat>RGC-{000000000}</displayFormat>
        <label>Risk Grading Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Grading Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>