force-app/main/default/objects/LLC_BI__Risk_Grade_Criteria__c/fields/LLC_BI__High__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__High__c</fullName>
    <description>This field is optional. It must be manually populated. It is only populated if its associated Risk Grade Factor&apos;s &quot;LLC_BI__Type__c&quot; is &quot;Quantitative&quot;. This field sets the highest value which is still within the range of the value set for &quot;Risk_Grade__c&quot; on this record. If the risk grade on this record does not have a high limit, this field should be left blank.</description>
    <label>High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>