force-app/main/default/objects/LLC_BI__Risk_Grade_Criteria__c/fields/LLC_BI__QV_Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__QV_Index__c</fullName>
    <description>This field is optional. It is set by an administrator. The qualitative value for qualitative records or NULL if the criteria is quantitative. Enhances performance when selecting out criteria.</description>
    <externalId>true</externalId>
    <label>QV_Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>