force-app/main/default/objects/LLC_BI__Risk_Grade_Criteria__c/fields/LLC_BI__Risk_Grade_Factor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Grade_Factor__c</fullName>
    <description>This field is required. It is populated automatically when creating a risk grade criteria from a risk grade factor. This field specifies the risk grade factor associated with the risk grade criteria.</description>
    <label>Risk Grade Factor</label>
    <referenceTo>LLC_BI__Risk_Grade_Factor__c</referenceTo>
    <relationshipLabel>Risk Grade Criterias</relationshipLabel>
    <relationshipName>Risk_Grade_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>