force-app/main/default/objects/LLC_BI__Risk_Grade_Criteria__c/validationRules/LLC_BI__higher_than_low.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__higher_than_low</fullName>
    <active>true</active>
    <description>The high value needs to be higher than the low value.</description>
    <errorConditionFormula>LLC_BI__High__c &lt;  LLC_BI__Low__c</errorConditionFormula>
    <errorDisplayField>LLC_BI__High__c</errorDisplayField>
    <errorMessage>The high value needs to be larger than the low value.</errorMessage>
</ValidationRule>