force-app/main/default/objects/LLC_BI__Risk_Grade_Criteria__c/validationRules/LLC_BI__lower_than_high.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__lower_than_high</fullName>
    <active>true</active>
    <description>The low value needs to be lower that the high value</description>
    <errorConditionFormula>LLC_BI__Low__c &gt;  LLC_BI__High__c</errorConditionFormula>
    <errorDisplayField>LLC_BI__Low__c</errorDisplayField>
    <errorMessage>The low value cannot be larger than the high value.</errorMessage>
</ValidationRule>